<resources>
    <string name="app_name">GO! Gent</string>
    <string name="login">Login</string>
    <string name="e_mailadres">e-mailadres</string>
    <string name="wachtwoord">wachtwoord</string>
    <string name="nieuwe_rit">Nieuwe rit</string>
    <string name="bus">bus</string>
    <string name="selecteer_bus">Selecteer een bus:</string>
    <string name="one">One</string>
    <string name="two">TWO</string>
    <string name="three">THREE</string>
    <string name="in_te_vullen_voor_vertrek">In te vullen voor vertrek</string>
    <string name="datum">Datum:</string>
    <string name="datum_edit">Datum</string>
    <string name="tijd">Tijd</string>
    <string name="vertrekplaats">Vertrekplaats:</string>
    <string name="plaats">Plaats</string>
    <string name="aantal">Aantal</string>
    <string name="aantal_leerlingen">Aantal leerlingen:</string>
    <string name="soort_vervoer">Soort vervoer:</string>
    <string name="naar_bestemming">Naar bestemming</string>
    <string name="kilometerstand">Kilometerstand</string>
    <string name="in_te_vullen_na_aankomst">In te vullen na aankomst</string>
    <string name="uur">Uur:</string>
    <string name="aankomsttijd">Aankomsttijd:</string>
    <string name="aankomstplaats">Aankomstplaats:</string>
    <string name="naar_samenvatting">Naar Samenvatting</string>
    <string name="kilometerstand_text">Kilometerstand:</string>
    <string name="samenvatting">Samenvatting</string>
    <string name="vertrek">Vertrek:</string>
    <string name="verzenden">Verzenden</string>
    <string name="datum_en_tijd">Datum en tijd:</string>
    <string name="aankomst">Aankomst:</string>
    <string name="tijd_text">Tijd:</string>
    <string name="log_out">Afmelden</string>
    <string name="uu_mm">uu:mm</string>
    <string name="dd_mm_jjjj">dd/mm/jjjj</string>
    <string name="selecteer_een_plaats">Selecteer een plaats:</string>
</resources>
